phpBMS v0.98
http://phpbms.org/browser/tags/phpbms-0.98
 * Support for importing records directly from within phpBMS
 * New install and update procedures
 * Snapshot is now modular and uses widgets
 * Snapshot is customizable based on user's preference
 * Centralized posting for receipts and invoices
 * Menu system now uses a uuid instead of an id, making module development easier.

The complete list of closed tickets can be found here: http://phpbms.org/query?status=closed&milestone=0.98

phpBMS v0.96
http://phpbms.org/browser/tags/phpbms-0.96
 * Support For Multiple Client Addresses
 * Separate Bill To and Ship To Addresses on Sales Orders
 * Automatic removal of old CC/Bank routing information on Invoices

The complete list of closed tickets can be found here: http://phpbms.org/query?status=closed&milestone=0.96

phpBMS v0.94
http://phpbms.org/browser/tags/phpbms-0.94
 * Ability to create Quotes for Prospects
 * New interface for choosing clients on sales orders
 * PDF email attachments nw have .PDF extension

The complete list of closed tickets can be found here: http://phpbms.org/query?status=closed&milestone=0.94

phpBMS v0.92
http://phpbms.org/browser/tags/phpbms-0.92
 * Sales Order line item editing
 * Sales Order line item re-ordering
 * New Receipt report
 * page numbering on Sales Order PDF reports

The complete list of closed tickets can be found here: http://phpbms.org/query?status=closed&milestone=0.92

phpBMS v0.9
http://phpbms.org/browser/tags/phpbms-0.9
 * Accounts Receivable
 * iCal formatted access to Events
 * enhanced User Interface
 * Switched over JavaScript programming style (more MochiKit Like)
 * E-Mail Client Inovice/Quote PDFs
 * New Recurring Invoice/Task/Event System
 * Added Ordering of Table Def Options
 * Recoded/formatted Sales Order PDFs

The complete list of closed tickets can be found here: http://phpbms.org/query?status=closed&milestone=0.9

phpBMS v0.8
http://phpbms.org/browser/tags/phpbms-0.8
 * Recurring invoices